@@ -761,3 +761,5 @@ seen. gmtime warning still there
   ugly since some flags are case insensitive and C == H but it works and seems pretty fast.
 - Added set::anti-spam-quit-message-time idea from hybrid7
 - Made the config smarter, for yes/no options yes/true/on/1 = yes no/false/off/0 = no
+- Made Unreal be able to recover from a bunch of config errors
+- Added stats flag r to the stats help list
